- Fixes the other api classes using newInstance too - Fixes a render crash if a livingwood avatar isn't holding a valid item